# ktkkt-downloader

./: .gitignore  README.md  __main__.py  constant.py  downloader.py  logger.py  module.py  pyproject.toml  requirements.txt  scraper.py  setup.cfg
ktkkt_downloader/: __init__.py  ktkkt_downloader.py
ktkkt_downloader/downloader/: downloader.py
ktkkt_downloader/logger/: logger.py
ktkkt_downloader/object/: episode.py
ktkkt_downloader/scraper/: __init__.py  ktkkt_strategy.py  scraper.py  strategy.py
tests/: test_logger.py  test_scraper.py
