[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend="setuptools.build_meta"

[project]
name = "ktkkt-downloader"
version = "1.0.1"
authors = [
    {name = "rkwyu", email = "ray.yukawai@gmail.com"}
]
description = "downloader for videos on ktkkt.cc"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
dependencies = [
    "beautifulsoup4>=4.10.0",
    "ffmpeg-python>=0.2.0",
    "pathvalidate>=2.4.1",
    "regex>=2021.8.28",
    "requests>=2.26.0"
]
