[metadata]
name = ktkkt-downloader
version = 1.0.0
author = r1y5i
description = downloader for videos on ktkkt.cc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r1y5i/ktkkt-downloader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True