[metadata]
name = ktkkt-downloader
version = 1.0.1
author = rkwyu
description = downloader for videos on ktkkt.cc
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rkwyu/ktkkt-downloader
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    beautifulsoup4>=4.10.0,
    ffmpeg-python>=0.2.0,
    pathvalidate>=2.4.1,
    regex>=2021.8.28,
    requests>=2.26.0